2012-07-19 Peter Foerger  <pfoerger@gmail.com>

	* Set trunk to version 0.6.0-dev

2012-07-19 Peter Foerger  <pfoerger@gmail.com>

	* Release of EXT:kickstarter v0.5.3

2011-08-04 Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed retrieval of common labels in kickstarter wizard when using TYPO3 4.6 (XLIFF)

2011-07-24 Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #10232: Reflect changes in main module names in TYPO3 4.2 (credits Francois Suter)

2011-07-23 Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #18218: Generated code should stick to TYPO3 CGL

2011-07-18 Xavier Perseguers  <typo3@perseguers.ch>

	* Removed calls to deprecated methods in TYPO3 4.6

2011-06-01 Peter Foerger  <pfoerger@gmail.com>

	* Set trunk to version 0.6.0-dev

2011-06-01 Peter Foerger  <pfoerger@gmail.com>

	* Release of EXT:kickstarter v0.5.1

2011-06-01 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #18157: Created Backend module use removed function t3lib_div::fixed_lgd_pre() (credits Steffen Gebert)

 2011-06-01 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #13446: Kickstarter allows hyphen in extension key (credits Matze)

2011-04-10 Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #18088: Generated extensions are not compatible with workspaces

2011-01-27 Peter Foerger  <pfoerger@gmail.com>

	* Set trunk to version 0.6.0-dev

2011-01-27 Peter Foerger  <pfoerger@gmail.com>

	* Release of EXT:kickstarter v0.5.0

2011-01-27 Peter Foerger  <pfoerger@gmail.com>

	* Replaced mixed quotes with single quotes in function call.

2011-01-26 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #16509: Convert all files to UTF-8

2011-01-26 Peter Foerger  <pfoerger@gmail.com>

	* Converted encoding to utf-8 and corrected Kaspers name

2011-01-26 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #17332: Newline character after php closing tag in class.tx_kickstarter_reservedwords.php

2011-01-26 Peter Foerger  <pfoerger@gmail.com>
